<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">问度娘</string>
    <string name="action_example">Example action</string>
    <string name="title_about">关于我们</string>
    <string name="action_more">更多</string>
    <string name="input_et_hint">请输入搜索内容...</string>
    <string name="search">百度一下</string>
    <string name="copy_success">复制成功</string>
    
    <string name="app_id">55dc6919</string>
    <string name="preference_default_iat_engine_en">sms-en</string>
    <string name="preference_key_iat_rate">iat_rate</string>
    <string name="preference_title_iat_rate">录音采样率</string>
    <string name="preference_default_iat_rate">rate16k</string>
    
    <string name="preference_key_iat_engine">iat_engine</string>
    <string name="preference_default_iat_engine">iat</string>
    
    <string name="preference_key_recognizer">recognizer</string>
    <string name="preference_default_recognizer">zh_cn</string>
    
    <string name="preference_key_accent">accent</string>
    <string name="preference_default_accent">mandarin</string>
    
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="app_ad">有神马不知道的\n就问度娘！</string>
    <string name="author">作者、设计：黎潞</string>
    
    <string name="leisuer_one">酷炫彩铃</string>
	<string name="leisuer_one_subtitle">听听音乐放松一下</string>
	<string name="leisuer_reading">阅读基地</string>
	<string name="leisuer_reading_subtitle">看看小说放松一下</string>
	<string name="leisuer_game">轻游戏中心</string>
	<string name="leisuer_game_subtitle">大家都爱玩的小游戏</string>
	
	<string name="webview_reload">加载失败，轻触屏幕刷新!</string>
	
	<string name="title_cailing">酷炫彩铃</string>
	<string name="title_reading">阅读基地</string>
</resources>
