<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/app_background"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/cailing_layout"
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="@dimen/padding_7"
                android:layout_marginRight="@dimen/padding_7"
                android:layout_marginTop="@dimen/padding_7"
                android:background="@color/style5_color4"
                android:foreground="@drawable/framelayout_selector"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:shadowColor="@color/white"
                        android:shadowDx="0.3"
                        android:shadowDy="0.3"
                        android:shadowRadius="0.3"
                        android:text="@string/leisuer_one"
                        android:textColor="@color/white"
                        android:textSize="@dimen/bigger" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/leisuer_one_subtitle"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/game_layout"
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="@dimen/padding_7"
                android:layout_marginRight="@dimen/padding_7"
                android:layout_marginTop="@dimen/padding_7"
                android:background="#81C784"
                android:foreground="@drawable/framelayout_selector"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:shadowColor="@color/white"
                        android:shadowDx="0.3"
                        android:shadowDy="0.3"
                        android:shadowRadius="0.3"
                        android:text="@string/leisuer_game"
                        android:textColor="@color/white"
                        android:textSize="@dimen/bigger" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/leisuer_game_subtitle"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/yuedu_layout"
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="@dimen/padding_7"
                android:layout_marginRight="@dimen/padding_7"
                android:layout_marginTop="@dimen/padding_7"
                android:background="#CE93D8"
                android:foreground="@drawable/framelayout_selector"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:shadowColor="@color/white"
                        android:shadowDx="0.3"
                        android:shadowDy="0.3"
                        android:shadowRadius="0.3"
                        android:text="@string/leisuer_reading"
                        android:textColor="@color/white"
                        android:textSize="@dimen/bigger" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/leisuer_reading_subtitle"
                        android:textColor="@color/white"
                        android:textSize="@dimen/small" />
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/aboutus_layout"
                android:layout_width="fill_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="@dimen/padding_7"
                android:layout_marginRight="@dimen/padding_7"
                android:layout_marginTop="@dimen/padding_7"
                android:background="@color/white"
                android:foreground="@drawable/framelayout_selector"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:shadowColor="@color/text_black"
                        android:shadowDx="0.3"
                        android:shadowDy="0.3"
                        android:shadowRadius="0.3"
                        android:text="@string/title_about"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/bigger" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>