<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_background"
    android:orientation="vertical" >

    <android.support.v7.widget.Toolbar
	    xmlns:app="http://schemas.android.com/apk/res-auto"
	    android:id="@+id/my_awesome_toolbar"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"
	    android:minHeight="?attr/actionBarSize"
	    android:background="?attr/colorPrimary" />
    
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/app_background"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="60dp"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/aboat_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/big" />

            <TextView
                android:id="@+id/app_version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:gravity="center_horizontal"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/middle" />

            <TextView
                android:id="@+id/aboat_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dip"
                android:gravity="center_horizontal"
                android:text="@string/app_ad"
                android:textColor="@color/text_grey"
                android:textSize="@dimen/bigest" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:gravity="center_horizontal"
                android:text="@string/author"
                android:textColor="@color/content_txt_6"
                android:textSize="@dimen/small" />

            <TextView
                android:id="@+id/email_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="Email：meixililulu@163.com"
                android:textColor="@color/content_txt_6"
                android:textSize="@dimen/small" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>